# swimsuit

./: Cargo.toml  README.md  index.html  package.json  tailwind.config.js
public/: index.html  manifest.json
src/: App.scss  App.tsx  Header.scss  Header.tsx  Icon.tsx  MouseCircle.scss  MouseCircle.tsx  Navbar.scss  Navbar.tsx  PhotoModal.scss  PhotoModal.tsx  Presentable.scss  Presentable.tsx  Project.scss  Project.tsx  Section.scss  Section.tsx  csr.rs  customHooks.ts  head.rs  lib.rs  main.rs  main_csr.rs  main_ssr.rs
src/Pages/: Bots.scss  Bots.tsx  Contact.scss  Contact.tsx  Hello.scss  Hello.tsx  Page.scss  Page.tsx
src/fa/css/: all.min.scss  monkey-patch.scss
src/platform/csr/: head.rs  mod.rs
src/platform/ssr/: app.rs  head.rs  mod.rs  page.rs  serve.rs
src/ssr/: hydrate.rs  index_html.rs  mod.rs  serve.rs
