[package]
name = "swimsuit"
version = "0.1.0"
edition = "2021"

# CSR
[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.21.0", features = ["hydration"] }

# SSR
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
futures = "0.3.31"
hyper = { version = "1.5.0", features = ["server", "http1"] }
hyper-util = "0.1.9"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }
yew = { version = "0.21.0", features = ["ssr"] }
